# kwami-ai-api

./: .dockerignore  .env.sample  Dockerfile  Makefile  README.md  auth.py  config.py  fly.toml  livekit_inference_llm.yaml  livekit_inference_stt.yaml  livekit_inference_tts.yaml  livekit_voices.yaml  main.py  pyproject.toml  token_utils.py
config/: livekit_languages.yaml
migrations/: 001_credits_system.sql  002_billing_accounting_upgrade.sql  002_user_kwamis.sql  003_admin_invoice_reconciliation.sql  004_kwami_communications.sql  005_user_app_settings.sql  006_kwami_email.sql  007_kwami_calendar.sql  008_kwami_contacts_fields.sql  009_kwami_wallets.sql
routes/: __init__.py  memory.py  models.py  token.py
src/: main.py
src/api/: deps.py
src/api/routes/: __init__.py  admin_reconciliation.py  calendar.py  channels.py  contacts.py  credits.py  email.py  internal.py  languages.py  memory.py  models.py  token.py  voices.py  wallet.py  webhooks.py
src/core/: config.py  security.py
src/services/: admin_reconciliation.py  calendar_service.py  channels.py  credits.py  custody_service.py  email_classifier.py  email_service.py  languages.py  livekit.py  models.py  pricing.py  sendgrid_service.py  stripe_service.py  telephony.py  twilio_service.py  voices.py  wallet_service.py
tests/: __init__.py  conftest.py  test_token.py
tests/api/: test_admin_reconciliation.py  test_credits.py  test_health.py  test_memory.py  test_models.py  test_token.py  test_wallet.py
tests/core/: test_security.py
