[project]
name = "kwami-lk-api"
version = "0.1.0"
description = "LiveKit token endpoint API for Kwami AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "livekit-api>=1.0.0",
    "livekit-agents>=1.0.0",
    "python-dotenv>=1.0.0",
    "zep-cloud>=3.0.0",
    "pyyaml>=6.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    # LiveKit plugins for model definitions extraction
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-anthropic>=1.0.0",
    "livekit-plugins-google>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-elevenlabs>=1.0.0",
    "livekit-plugins-cartesia>=1.0.0",
    "livekit-plugins-groq>=1.0.0",
    "livekit-plugins-mistralai>=1.0.0",
    "livekit-plugins-rime>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    # Note: AWS plugin requires aws-sdk-bedrock-runtime for full functionality
    # Model listing uses fallback, so plugin is optional
    # Credits & payments
    "stripe>=8.0.0",
    "supabase>=2.0.0",
    # Graph analysis for memory operations
    "networkx>=3.2.0",
    "python-louvain>=0.16",
    "thefuzz[speedup]>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
kwami-api = "src.main:run"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
